--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -42,7 +42,7 @@
       <div id="mpiidotspacer"></div><div id="mpiidot"></div></div>
     <div id="head2o2">
       <div id="deco"></div>
-      <div id="inria" >Inria<br>
+      <div id="inria" ><br>
         </div>
       <img id="inrialogo" src="./assets/inria_files/inr_logo_rouge.jpg" alt="mpii" usemap="#Map" width="150" height="50">
       <map name="Map" id="Map">
@@ -134,7 +134,7 @@
 
       <div style="font: 12px/1.2 Crimson Pro, serif">
         <br>
-        <a href="https://github.com/yaoyao-liu/minimal-light" rel="noopener">Feel free to use my website's source code.</a>
+        
       </div>
 
       <br>
@@ -144,9 +144,6 @@
       <footer>
         <div style="font: 12px/1.2 Crimson Pro, serif">
         <p>
-        <small>
-        <a href="{{ site.imprint }}" rel="noopener"><autocolor>Imprint / Impressum</autocolor></a><br>
-        <a href="{{ site.data_protection }}" rel="noopener"><autocolor>Data Protection / Datenschutzhinweis</autocolor></a>
         </small>
         </p>
         </div>
