Updated website favicon

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -44,7 +44,7 @@
       <div id="deco"></div>
       <div id="inria" ><br>
         </div>
-      <img id="inrialogo" src="./assets/inria_files/inr_logo_rouge.jpg" alt="mpii" usemap="#Map" width="150" height="50">
+      <img id="lmulogo" src="./assets/inria_files/lmu_logo.png" alt="mpii" usemap="#Map" width="150" height="50">
       <map name="Map" id="Map">
         <area shape="rect" coords="48.5,7,148,35" href="https://www.inria.fr/" target="_blank" rel="noopener" alt="MPII">
         <area shape="circle" coords="20.5,24.5,20" href="https://www.inria.fr/" target="_blank" rel="noopener" alt="Inria">
